--- a/WebFeInterface/stageProgressBar-styles.css
+++ b/WebFeInterface/stageProgressBar-styles.css
@@ -5,8 +5,8 @@
 
 #progress-bar {
     position: absolute;
-    background: #0062cc;
-    height: 5px;
+    background: #0d6efd;
+    height: 1px;
     width: 0%;
     top: 50%;
     left: 0;
@@ -26,13 +26,14 @@
     position: absolute;
     top: 50%;
     left: 0;
-    height: 5px;
+    height: 1px;
     width: 100%;
     z-index: -1;
 }
 
 #progress-num .step {
-    margin-top: 7px;
+    border: 1px solid lightgray;
+    margin-top: 5px;
     border-radius: 25%;
     line-height: 25px;
     text-align: center;
@@ -45,14 +46,13 @@
     width: 100px;
     height: 25px;
     border-radius: 1rem;
-    border: none;
+    color: rgb(185, 185, 185);
 }
 
 #progress-num .step.active {
-    margin-top: 7px;
-    border-color: #0062cc;
-    background-color: #0062cc;
-    color: #fff;
+    margin-top: 5px;
+    border-color: #0d6efd;
+    color: #0d6efd;
 }
 
 .stage-progress-bar-container {
